Add reasonable amount of memory to tomcat JVM args
git-svn-id: https://svn.apache.org/repos/asf/webservices/juddi/trunk@825360 13f79535-47bb-0310-9956-ffa450edef68